Ajustes varios, hojas de estilos especificas y separadas para medias queries, Responsive para tablet

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/estilos.css">
-    <link href="/your-path-to-uicons/css/uicons-[your-style].css" rel="stylesheet">
+    <link rel="stylesheet" href="./css/estilosHome.css">
+    <link rel="stylesheet" href="./css/queriesHome.css">
     <title>WorkWave Store</title>
 </head>
 <body>
@@ -24,8 +24,8 @@
             </nav>
             <div class="busqueda">
                 <input type="text" name="buscar" id="buscar" placeholder="¿Que estas buscando?">
-                <a href="">❤️</a>
-                <a href="">🛒</a>
+                <a class="iconMenu" href="">❤️</a>
+                <a class="iconMenu" href="">🛒</a>
             </div>    
         </div>
     </header>
@@ -308,19 +308,19 @@
                 <div class="timer">
                     <div class="timerCirculos">
                         <p class="timerNummero">2</p>
-                        <p class="timerPalabra">Días</p>
+                        <p class="timerTexto">Días</p>
                     </div>
                     <div class="timerCirculos">
                         <p class="timerNummero">5</p>
-                        <p class="timerPalabra">Horas</p>
+                        <p class="timerTexto">Horas</p>
                     </div>
                     <div class="timerCirculos">
                         <p class="timerNummero">59</p>
-                        <p class="timerPalabra">Minutos</p>
+                        <p class="timerTexto">Minutos</p>
                     </div>
                     <div class="timerCirculos">
                         <p class="timerNummero">35</p>
-                        <p class="timerPalabra">Segundos</p>
+                        <p class="timerTexto">Segundos</p>
                     </div>
                 </div>
                 <a href="#">VER MÁS</a>
@@ -410,7 +410,7 @@
                 <a href="" class="btnCarrito">Ver más</a>
             </article>
         </section>
-        <section class="sectionContenedor nuestrosProductos">
+        <section class="sectionContenedor ultimosIngresos">
             <header>
                 <div class="titulos">
                     <h4>Destacados</h4>
@@ -477,39 +477,39 @@
             <div class="col col1">
                 <h3>Exclusivo</h3>
                 <h3>Suscribite</h3>
-                <p>Obtén un 10% off en tu primer orden</p>
+                <p class="footerText">Obtén un 10% off en tu primer orden</p>
                 <input type="text" placeholder='Tu correo electronico'/>
             </div>
             <div class="col col2">
                 <h3>Soporte</h3>
-                <p>Calle Falsa 123</p>
-                <a href="mailto:contacto@workwave.com" target="blank">contacto@workwave.com</a>
-                <p>+54 221 7765 3445</p>
+                <p class="footerText">Calle Falsa 123</p>
+                <a class="footerLink" href="mailto:contacto@workwave.com" target="blank">contacto@workwave.com</a>
+                <p class="footerText">+54 221 7765 3445</p>
             </div>
             <div class="col col3">
                 <h3>Cuenta</h3>
-                <a href="">Mi cuenta</a>
-                <a href="">Iniciar Sesion / Registro</a>
-                <a href=""> Carrito</a>
-                <a href="">Lista de Deseos</a>
-                <a href="">Tienda</a>
+                <a class="footerLink" href="">Mi cuenta</a>
+                <a class="footerLink" href="">Iniciar Sesion / Registro</a>
+                <a class="footerLink" href=""> Carrito</a>
+                <a class="footerLink" href="">Lista de Deseos</a>
+                <a class="footerLink" href="">Tienda</a>
             </div>
             <div class="col col4">
                 <h3>Enlaces rápidos</h3>
-                <a href="">Políticas de Privacidad</a>
-                <a href="">Términos de uso</a>
-                <a href="">Preguntas Frecuentes</a>
-                <a href="">Contacto</a>
+                <a class="footerLink" href="">Políticas de Privacidad</a>
+                <a class="footerLink" href="">Términos de uso</a>
+                <a class="footerLink" href="">Preguntas Frecuentes</a>
+                <a class="footerLink" href="">Contacto</a>
             </div>
             <div class="col col5">
                 <h3>Descarga la App</h3>
-                <p>Ahorra 10% solo para nuevos usuarios</p>
+                <p class="footerText">Ahorra 10% solo para nuevos usuarios</p>
                 <img src="./img/App.svg" alt="">
                 <div class="rrss">
-                    <a href=""><img src="./img/Icon-Facebook.svg" alt=""></a>
-                    <a href=""><img src="./img/Icon-Twitter.svg" alt=""></a>
-                    <a href=""><img src="./img/icon-instagram.svg" alt=""></a>
-                    <a href=""><img src="./img/Icon-Linkedin.svg" alt=""></a>
+                    <a class="footerLink" href=""><img src="./img/Icon-Facebook.svg" alt=""></a>
+                    <a class="footerLink" href=""><img src="./img/Icon-Twitter.svg" alt=""></a>
+                    <a class="footerLink" href=""><img src="./img/icon-instagram.svg" alt=""></a>
+                    <a class="footerLink" href=""><img src="./img/Icon-Linkedin.svg" alt=""></a>
                 </div>
             </div>
         </div>
