--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
             <div class="logo">
                 <h1 class="logo">WorkWave Store</h1>
             </div>
+            <div class="menu-hamburguesa">
+                <svg width="20" height="20" viewBox="0 0 100 80" fill="currentColor">
+                    <rect width="100" height="15"></rect>
+                    <rect y="30" width="100" height="15"></rect>
+                    <rect y="60" width="100" height="15"></rect>
+                </svg>
+            </div>
             <nav id="menuPrincipal" class="menuPrincipal">
                 <ul>
                     <li><a href="">Inicio</a></li>
