Estilos css Header y Footer en hojas separadas para reutilización en otras páginas

--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/header.css">
     <link rel="stylesheet" href="./css/estilosHome.css">
     <link rel="stylesheet" href="./css/queriesHome.css">
+    <link rel="stylesheet" href="./css/footer.css">
     <title>WorkWave Store</title>
 </head>
 <body>
@@ -511,7 +513,7 @@
             <div class="col col5">
                 <h3>Descarga la App</h3>
                 <p class="footerText">Ahorra 10% solo para nuevos usuarios</p>
-                <img src="./img/App.svg" alt="">
+                <img class="footerDownloadAPP" src="./img/App.svg" alt="">
                 <div class="rrss">
                     <a class="footerLink" href=""><img src="./img/Icon-Facebook.svg" alt=""></a>
                     <a class="footerLink" href=""><img src="./img/Icon-Twitter.svg" alt=""></a>
