--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/generales.css">
     <link rel="stylesheet" href="./css/header.css">
     <link rel="stylesheet" href="./css/estilosHome.css">
     <link rel="stylesheet" href="./css/queriesHome.css">
