Página de producto desktop

--- a/producto.html
+++ b/producto.html
@@ -49,7 +49,117 @@
         </div>
     </section>
     <section class="sectionContenedor producto">
-        
+        <div class="imagenesProducto">
+            <img class="imgThumbnail1" src="./img/imgProducto1.svg" alt="" class="img">
+            <img class="imgThumbnail2" src="./img/imgProducto2.svg" alt="" class="img">
+            <img class="imgThumbnail3" src="./img/imgProducto3.svg" alt="" class="img">
+            <img class="imgThumbnail4" src="./img/imgProducto4.svg" alt="" class="img">
+            <img class="imgPrincipal" src="./img/imgProductoPrincipal.svg" alt="" class="imgPrincipal">
+        </div>
+        <div class="infoProducto">
+            <h2>Joystick Ps5 Inalámbrico Sony PlayStation DualSense CFI-ZCT1W White/Black</h2>
+            <div class="reseñaStock">
+                <img src="./img/reseñasProducto.svg" alt="" class="stars">
+                <p class="cantReview">(153 Reseñas)</p>
+                <p class="stock">| En Stock</p>
+            </div>
+            <div class="precio">
+                <p class="precioRegular">$1499</p>
+            </div>
+            <p class="descripcionCorta">Experimenta una experiencia de juego más profunda y envolvente que hace que la acción cobre vida en las palmas de tus manos. El control inalámbrico DualSense™ ofrece retroalimentación háptica inmersiva, gatillos adaptativos dinámicos y un micrófono incorporado, todo integrado en un diseño icónico y cómodo.</p>
+            <div class="caracteristicas">
+                <p>Lo que tenés que saber de este producto</p>
+                <ul>
+                    <li>Cuenta con Bluetooth</li>
+                    <li>Pantalla táctil</li>
+                    <li>Mando inalámbrico</li>
+                    <li>Compatible con: Computadoras</li>
+                    <li>Con sistema de vibración incorporado</li>
+                    <li>Cuienta con manual</li>
+                    <li>Diversión garantizada con tu joystick PlayStation</li>
+                    <li>Diseño ergonómico</li>
+                </ul>
+            </div>
+            <div class="divider"></div>
+
+            <div class="accionesProducto">
+                <div class="selectorCantidad">
+                    <button class="decrementar">−</button>
+                    <span class="cantidad">1</span>
+                    <button class="incrementar">+</button>
+                </div>
+                <button class="comprar">Comprar ahora</button>
+                <button class="wishlist">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                        <path d="M20.84 4.61c-1.1-1.1-2.88-1.1-3.98 0l-.86.86-.86-.86c-1.1-1.1-2.88-1.1-3.98 0-1.1 1.1-1.1 2.88 0 3.98l4.84 4.84 4.84-4.84c1.1-1.1 1.1-2.88 0-3.98z"></path>
+                    </svg>
+                </button>
+            </div>
+            <div class="caracTienda">
+                <div class="item">
+                    <img src="./img/Caract1.svg" alt="Envio rapido y gratis">
+                    <div class="itemInfo">
+                        <h3>Envío rápido y gratis</h3>
+                        <p>Envío gratis en ordenes superior a $149</p>
+                    </div>
+                    </div>
+                <div class="item">
+                    <img src="./img/Caract3.svg" alt="Garantia">
+                    <div class="itemInfo">
+                        <h3>Garantía</h3>
+                        <p>Contamos con garantía de 30 días</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="sectionContenedor masVendidos">
+        <header>
+            <div class="titulos">
+                <h4>Tal vez te interesen</h4>
+                <h2>Productos Relacionados</h2>
+            </div>
+            <nav>
+                <a href=""><</a>
+                <a href="">></a>
+            </nav>
+        </header>
+        <article class="cardProducto">
+            <img src="https://dummyimage.com/480x4:3/" alt="">
+            <h3>Teclado Mecánico RGB</h3>
+            <p class="productoDescripción">Rendimiento y estilo en cada pulsación, ideal para trabajar y jugar.</p>
+            <div class="precio">
+                <p class="precioDescuento">$89</p>
+            </div>
+            <a href="" class="btnCarrito">Ver más</a>
+        </article>
+        <article class="cardProducto">
+            <img src="https://dummyimage.com/480x4:3/" alt="">
+            <h3>Audífonos Noise Cancelling</h3>
+            <p class="productoDescripción">Silencia el ruido exterior y concéntrate en tu trabajo.</p>
+            <div class="precio">
+                <p class="precioDescuento">$119</p>
+            </div>
+            <a href="" class="btnCarrito">Ver más</a>
+        </article>
+        <article class="cardProducto">
+            <img src="https://dummyimage.com/480x4:3/" alt="">
+            <h3>Escritorio Ajustable PRO</h3>
+            <p class="productoDescripción">Trabajá de pie o sentado con este escritorio ajustable en altura.</p>
+            <div class="precio">
+                <p class="precioDescuento">$249</p>
+            </div>
+            <a href="" class="btnCarrito">Ver más</a>
+        </article>
+        <article class="cardProducto">
+            <img src="https://dummyimage.com/480x4:3/" alt="">
+            <h3>Mouse Ergonómico Vertical</h3>
+            <p class="productoDescripción">Cuida tu muñeca con este mouse ergonómico de diseño vertical.</p>
+            <div class="precio">
+                <p class="precioDescuento">$49</p>
+            </div>
+            <a href="" class="btnCarrito">Ver más</a>
+        </article>
     </section>
     <footer>
         <div class="sectionContenedor footerPrincipal">
