--- a/producto.html
+++ b/producto.html
@@ -49,6 +49,7 @@
         </div>
     </section>
     <section class="sectionContenedor producto">
+        <h2 class="tituloResponsive">Joystick Ps5 Inalámbrico Sony PlayStation DualSense CFI-ZCT1W White/Black</h2>
         <div class="imagenesProducto">
             <img class="imgThumbnail1" src="./img/imgProducto1.svg" alt="" class="img">
             <img class="imgThumbnail2" src="./img/imgProducto2.svg" alt="" class="img">
@@ -90,9 +91,7 @@
                 </div>
                 <button class="comprar">Comprar ahora</button>
                 <button class="wishlist">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                        <path d="M20.84 4.61c-1.1-1.1-2.88-1.1-3.98 0l-.86.86-.86-.86c-1.1-1.1-2.88-1.1-3.98 0-1.1 1.1-1.1 2.88 0 3.98l4.84 4.84 4.84-4.84c1.1-1.1 1.1-2.88 0-3.98z"></path>
-                    </svg>
+                    <svg stroke="currentColor" stroke-width="0.5" fill="none" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg"><path clip-rule="evenodd" d="m49.2944 25.7212c-7.42-7.4199-19.4501-7.4199-26.8701 0-7.4199 7.42-7.4199 19.4501 0 26.8701l25.2079 25.2093c1.1715 1.1716 3.0708 1.1717 4.2425.0003l25.2109-25.2063c7.4199-7.4199 7.4199-19.4501 0-26.87-7.4189-7.4189-19.4465-7.42-26.8667-.0034l-.0034.0034c-.2534.2534-.6677.2501-.9211-.0034zm25.6699 24.7521c6.2484-6.2484 6.2484-16.379 0-22.6274s-16.3791-6.2484-22.6275 0l-.4588.4589c-1.1716 1.1716-3.0711 1.1716-4.2427 0l-.4622-.4623c-6.2484-6.2483-16.379-6.2483-22.6274 0-6.2484 6.2484-6.2484 16.3791 0 22.6275l23.0865 23.0867c1.1715 1.1715 3.0708 1.1716 4.2424.0003z" fill="rgb(0,0,0)" fill-rule="evenodd"></path></svg>
                 </button>
             </div>
             <div class="caracTienda">
