enlaces entre páginas para navegación: Home, Producto, Contacto

--- a/contacto.html
+++ b/contacto.html
@@ -28,11 +28,11 @@
             </div>
             <nav id="menuPrincipal" class="menuPrincipal">
                 <ul>
-                    <li><a href="">Inicio</a></li>
+                    <li><a href="./index.html">Inicio</a></li>
                     <li><a href="">Nostros</a></li>
-                    <li><a href="">Productos</a></li>
+                    <li><a href="./producto.html">Productos</a></li>
                     <li><a href="">Ofertas</a></li>
-                    <li><a href="">Contacto</a></li>
+                    <li><a href="./contacto.html">Contacto</a></li>
                 </ul>
             </nav>
             <div class="busqueda">
