--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
             </div>
             <nav id="menuPrincipal" class="menuPrincipal">
                 <ul>
-                    <li><a href="">Inicio</a></li>
+                    <li><a href="./index.html">Inicio</a></li>
                     <li><a href="">Nostros</a></li>
-                    <li><a href="">Productos</a></li>
+                    <li><a href="./producto.html">Productos</a></li>
                     <li><a href="">Ofertas</a></li>
-                    <li><a href="">Contacto</a></li>
+                    <li><a href="./contacto.html">Contacto</a></li>
                 </ul>
             </nav>
             <div class="busqueda">
@@ -82,7 +82,7 @@
                     <p class="precioRegular">$1499</p>
                     <p class="precioDescuento">$999</p>
                 </div>
-                <a href="" class="btnCarrito">Ver más</a>
+                <a href="./producto.html" class="btnCarrito">Ver más</a>
             </article>
             <article class="cardProducto">
                 <img src="https://dummyimage.com/480x4:3/" alt="">
@@ -92,7 +92,7 @@
                     <p class="precioRegular">$229</p>
                     <p class="precioDescuento">$149</p>
                 </div>
-                <a href="" class="btnCarrito">Ver más</a>
+                <a href="./producto.html" class="btnCarrito">Ver más</a>
             </article>
             <article class="cardProducto">
                 <img src="https://dummyimage.com/480x4:3/" alt="">
@@ -102,7 +102,7 @@
                     <p class="precioRegular">$319</p>
                     <p class="precioDescuento">$219</p>
                 </div>
-                <a href="" class="btnCarrito">Ver más</a>
+                <a href="./producto.html" class="btnCarrito">Ver más</a>
             </article>
             <article class="cardProducto">
                 <img src="https://dummyimage.com/480x4:3/" alt="">
@@ -112,7 +112,7 @@
                     <p class="precioRegular">$69</p>
                     <p class="precioDescuento">$39</p>
                 </div>
-                <a href="" class="btnCarrito">Ver más</a>
+                <a href="./producto.html" class="btnCarrito">Ver más</a>
             </article>
         </section>
         <section class="sectionContenedor categorias">
@@ -188,7 +188,7 @@
                 <div class="precio">
                     <p class="precioDescuento">$89</p>
                 </div>
-                <a href="" class="btnCarrito">Ver más</a>
+                <a href="./producto.html" class="btnCarrito">Ver más</a>
             </article>
             <article class="cardProducto">
                 <img src="https://dummyimage.com/480x4:3/" alt="">
@@ -197,7 +197,7 @@
                 <div class="precio">
                     <p class="precioDescuento">$119</p>
                 </div>
-                <a href="" class="btnCarrito">Ver más</a>
+                <a href="./producto.html" class="btnCarrito">Ver más</a>
             </article>
             <article class="cardProducto">
                 <img src="https://dummyimage.com/480x4:3/" alt="">
@@ -206,7 +206,7 @@
                 <div class="precio">
                     <p class="precioDescuento">$249</p>
                 </div>
-                <a href="" class="btnCarrito">Ver más</a>
+                <a href="./producto.html" class="btnCarrito">Ver más</a>
             </article>
             <article class="cardProducto">
                 <img src="https://dummyimage.com/480x4:3/" alt="">
@@ -215,7 +215,7 @@
                 <div class="precio">
                     <p class="precioDescuento">$49</p>
                 </div>
-                <a href="" class="btnCarrito">Ver más</a>
+                <a href="./producto.html" class="btnCarrito">Ver más</a>
             </article>
         </section>
         <section class="sectionContenedor reseñasSeccion">
@@ -357,7 +357,7 @@
                 <div class="precio">
                     <p class="precioDescuento">$189</p>
                 </div>
-                <a href="" class="btnCarrito">Ver más</a>
+                <a href="./producto.html" class="btnCarrito">Ver más</a>
             </article>
             <article class="cardProducto">
                 <img src="https://dummyimage.com/480x4:3/" alt="">
@@ -366,7 +366,7 @@
                 <div class="precio">
                     <p class="precioDescuento">$419</p>
                 </div>
-                <a href="" class="btnCarrito">Ver más</a>
+                <a href="./producto.html" class="btnCarrito">Ver más</a>
             </article>
             <article class="cardProducto">
                 <img src="https://dummyimage.com/480x4:3/" alt="">
@@ -375,7 +375,7 @@
                 <div class="precio">
                     <p class="precioDescuento">$129</p>
                 </div>
-                <a href="" class="btnCarrito">Ver más</a>
+                <a href="./producto.html" class="btnCarrito">Ver más</a>
             </article>
             <article class="cardProducto">
                 <img src="https://dummyimage.com/480x4:3/" alt="">
@@ -384,7 +384,7 @@
                 <div class="precio">
                     <p class="precioDescuento">$29</p>
                 </div>
-                <a href="" class="btnCarrito">Ver más</a>
+                <a href="./producto.html" class="btnCarrito">Ver más</a>
             </article>
             <article class="cardProducto">
                 <img src="https://dummyimage.com/480x4:3/" alt="">
@@ -393,7 +393,7 @@
                 <div class="precio">
                     <p class="precioDescuento">$49</p>
                 </div>
-                <a href="" class="btnCarrito">Ver más</a>
+                <a href="./producto.html" class="btnCarrito">Ver más</a>
             </article>
             <article class="cardProducto">
                 <img src="https://dummyimage.com/480x4:3/" alt="">
@@ -402,7 +402,7 @@
                 <div class="precio">
                     <p class="precioDescuento">$159</p>
                 </div>
-                <a href="" class="btnCarrito">Ver más</a>
+                <a href="./producto.html" class="btnCarrito">Ver más</a>
             </article>
             <article class="cardProducto">
                 <img src="https://dummyimage.com/480x4:3/" alt="">
@@ -411,7 +411,7 @@
                 <div class="precio">
                     <p class="precioDescuento">$69</p>
                 </div>
-                <a href="" class="btnCarrito">Ver más</a>
+                <a href="./producto.html" class="btnCarrito">Ver más</a>
             </article>
             <article class="cardProducto">
                 <img src="https://dummyimage.com/480x4:3/" alt="">
@@ -420,7 +420,7 @@
                 <div class="precio">
                     <p class="precioDescuento">$79</p>
                 </div>
-                <a href="" class="btnCarrito">Ver más</a>
+                <a href="./producto.html" class="btnCarrito">Ver más</a>
             </article>
         </section>
         <section class="sectionContenedor ultimosIngresos">
@@ -439,7 +439,7 @@
                 <div class="infoTexto">
                     <h3>PlayStation 5</h3>
                     <p>En sus versiones en Blanco y Negro</p>
-                    <a href="" class="btnCarrito">Ver más</a>
+                    <a href="./producto.html" class="btnCarrito">Ver más</a>
                 </div>
             </article>
             <article class="flyerNuevosProductos2">
@@ -447,7 +447,7 @@
                 <div class="infoTexto">
                     <h3>Parlante JBL</h3>
                     <p>Sonido potente y portátil para cualquier ocasión.</p>
-                    <a href="" class="btnCarrito">Ver más</a>
+                    <a href="./producto.html" class="btnCarrito">Ver más</a>
                 </div>
             </article>
             <article class="flyerNuevosProductos3">
@@ -455,7 +455,7 @@
                 <div class="infoTexto">
                     <h3>Asistente Virtual Alexa</h3>
                     <p>Controla tu hogar inteligente con solo tu voz.</p>
-                    <a href="" class="btnCarrito">Ver más</a>
+                    <a href="./producto.html" class="btnCarrito">Ver más</a>
                 </div>
             </article>
             <article class="flyerNuevosProductos4">
@@ -463,7 +463,7 @@
                 <div class="infoTexto">
                     <h3>Monitor Gaming</h3>
                     <p>Ideal para una experiencia de juego inmersiva.</p>
-                    <a href="" class="btnCarrito">Ver más</a>
+                    <a href="./producto.html" class="btnCarrito">Ver más</a>
                 </div>
             </article>
         </section>
