--- a/producto.html
+++ b/producto.html
@@ -28,11 +28,11 @@
             </div>
             <nav id="menuPrincipal" class="menuPrincipal">
                 <ul>
-                    <li><a href="">Inicio</a></li>
+                    <li><a href="./index.html">Inicio</a></li>
                     <li><a href="">Nostros</a></li>
-                    <li><a href="">Productos</a></li>
+                    <li><a href="./producto.html">Productos</a></li>
                     <li><a href="">Ofertas</a></li>
-                    <li><a href="">Contacto</a></li>
+                    <li><a href="./contacto.html">Contacto</a></li>
                 </ul>
             </nav>
             <div class="busqueda">
@@ -133,7 +133,7 @@
             <div class="precio">
                 <p class="precioDescuento">$89</p>
             </div>
-            <a href="" class="btnCarrito">Ver más</a>
+            <a href="./producto.html" class="btnCarrito">Ver más</a>
         </article>
         <article class="cardProducto">
             <img src="https://dummyimage.com/480x4:3/" alt="">
@@ -142,7 +142,7 @@
             <div class="precio">
                 <p class="precioDescuento">$119</p>
             </div>
-            <a href="" class="btnCarrito">Ver más</a>
+            <a href="./producto.html" class="btnCarrito">Ver más</a>
         </article>
         <article class="cardProducto">
             <img src="https://dummyimage.com/480x4:3/" alt="">
@@ -151,7 +151,7 @@
             <div class="precio">
                 <p class="precioDescuento">$249</p>
             </div>
-            <a href="" class="btnCarrito">Ver más</a>
+            <a href="./producto.html" class="btnCarrito">Ver más</a>
         </article>
         <article class="cardProducto">
             <img src="https://dummyimage.com/480x4:3/" alt="">
@@ -160,7 +160,7 @@
             <div class="precio">
                 <p class="precioDescuento">$49</p>
             </div>
-            <a href="" class="btnCarrito">Ver más</a>
+            <a href="./producto.html" class="btnCarrito">Ver más</a>
         </article>
     </section>
     <footer>
