Página nosotros, cambios en los headers de todas las páginas

--- a/producto.html
+++ b/producto.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/generales.css">
     <link rel="stylesheet" href="./css/header.css">
+    <link rel="stylesheet" href="./css/breadcrumbs.css">
     <link rel="stylesheet" href="./css/estilosProducto.css">
     <link rel="stylesheet" href="./css/queriesProducto.css">
     <link rel="stylesheet" href="./css/footer.css">
@@ -29,7 +30,7 @@
             <nav id="menuPrincipal" class="menuPrincipal">
                 <ul>
                     <li><a href="./index.html">Inicio</a></li>
-                    <li><a href="">Nostros</a></li>
+                    <li><a href="./nosotros.html">Nosotros</a></li>
                     <li><a href="./producto.html">Productos</a></li>
                     <li><a href="">Ofertas</a></li>
                     <li><a href="./contacto.html">Contacto</a></li>
