--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <nav id="menuPrincipal" class="menuPrincipal">
                 <ul>
                     <li><a href="./index.html">Inicio</a></li>
-                    <li><a href="">Nostros</a></li>
+                    <li><a href="./nosotros.html">Nosotros</a></li>
                     <li><a href="./producto.html">Productos</a></li>
                     <li><a href="">Ofertas</a></li>
                     <li><a href="./contacto.html">Contacto</a></li>
