--- a/nosotros.html
+++ b/nosotros.html
@@ -60,7 +60,28 @@
         <div class="img">
             <img src="./img/nosotros.jpg" alt="">
         </div>
-
+    </section>
+    <section class="sectionContenedor caracteristicas">
+        <div class="item">
+            <img src="./img/Caract1Nosotros.svg" alt="Freelances felices">
+            <h3>27.5</h3>
+            <p>Freelances felices</p>
+        </div>
+        <div class="item">
+            <img src="./img/Caract2Nosotros.svg" alt="Ventas mensuales">
+            <h3>33k</h3>
+            <p>Ventas mensuales</p>
+        </div>
+        <div class="item">
+            <img src="./img/Caract3Nosotros.svg" alt="Usuarios fieles">
+            <h3>45.5k</h3>
+            <p>Usuarios fieles</p>
+        </div>
+        <div class="item">
+            <img src="./img/Caract4Nosotros.svg" alt="Articulos nuevos">
+            <h3>100k</h3>
+            <p>Articulos nuevos</p>
+        </div>
     </section>
     <footer>
         <div class="sectionContenedor footerPrincipal">
