--- a/contacto.html
+++ b/contacto.html
@@ -112,7 +112,7 @@
                         <img src="./img/send_input.svg" alt="Enviar">
                     </button>
                 </div>
-                <p id="envioSatisfactorio" class="mensajeSatisfactorio" style="display: none;"></p>
+                <p id="envioSatisfactorio" class="mensajeSatisfactorio">Mensaje</p>
             </div>
             <div class="col col2">
                 <h3>Soporte</h3>
